@@ -1,3 +1,15 @@
+Fri Dec 30 18:35:50 1994  Richard Basch  (probe@tardis)
+
+	* logutil.c
+	* login.c
+	  	Tidied up the code a bit.
+		Do not rely on NO_UT_TYPE (it has problems with AIX headers)
+
+	* krlogind.c
+	  	Tidied up the code a bit.
+	  	Set the controlling tty for Ultrix
+		Do not rely on NO_UT_TYPE (it has problems with AIX headers)
+
 Thu Dec 29 10:12:48 1994  Richard Basch  (probe@tardis)
 
 	* krlogind.c
